# rs-sep5

./: Cargo.toml
src/: seed_phrase.rs
