[package]
name = "sep5"
description = "Key Derivation Methods for Stellar Keys"
homepage = "https://github.com/ahalabs/rs-sep5"
repository = "https://github.com/ahalabs/rs-sep5"
authors = ["Aha Labs <team@ahalabs.dev>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.0.5"
edition = "2021"
rust-version = "1.67"

[dependencies]
stellar-strkey = "0.0.15"
thiserror = "1.0.31"
slip10 = { package = "slipped10", version = "0.4.6" }
tiny-bip39 = "1.0.0"
